# dioxus-halres

./: .gitignore  Cargo.toml  Dioxus.toml  create.sql  dogs.txt  halreslib.sqlite  hotdog.db  package-lock.json  package.json
assets/: table.min.js
js/: table.js
src/: backend.rs  hal_resource.rs  main.rs  resource.rs  server.rs
src/backend/: downloader.rs
src/components/: favorites.rs  mod.rs  nav.rs  page_not_found.rs  table.rs  url_list.rs
