[package]
name = "links"
version = "0.1.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", optional = true }
axum = { version = "0.7.9", optional = true }
blake3 = { version = "1.7.0", optional = true }
chrono = { version = "0.4.40", optional = true }
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
dioxus-cli-config = "0.6.3"
futures = { version = "0.3.31", optional = true }
reqwest = { version = "0.12.15", features = ["json"] }
rusqlite = { version = "0.34.0", optional = true }
select = { version = "0.6.1", optional = true }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"], optional = true }

[features]
default = ["server"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = [
    "dioxus/server",
    "dep:axum",
    "dep:tokio",
    "dep:rusqlite",
    "dep:chrono",
    "dep:blake3",
    "dep:anyhow",
    "dep:select",
    "dep:futures",
]
blake3 = ["dep:blake3"]
anyhow = ["dep:anyhow"]
select = ["dep:select"]
futures = ["dep:futures"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
